Fixing 2 major bugs: layout on mobile devices & infinite loop onUpload

--- a/css/image-gallery-custom.css
+++ b/css/image-gallery-custom.css
@@ -6,7 +6,6 @@
 
 .image-gallery-thumbnail {
   border-radius: 10px;
-  background-color: "red";
 }
 
 .image-gallery-thumbnail img {
